@@ -111,7 +111,6 @@ var KEYCODES = {
     SINGLEQUOTE: 222,
     LEFTCOMMAND: 91,
     RIGHTCOMMAND: 92,
-    TILDA: 192
 };
 
 function type(param) {
@@ -137,11 +136,11 @@ $(document).keyup(function (event) {
 function checkKeyPress(keycode) {
     //Prevent repetitive keys
     if (down[keycode] == null) {
-        
+
         if (keycode == KEYCODES.SHIFT) {
             $("#16a").addClass('keydown');
         }
-        
+
         $("#" + keycode).addClass('keydown');
         down[keycode] = true;
 
@@ -287,7 +286,7 @@ function checkKeyPress(keycode) {
         if (keycode == KEYCODES.Z) {
             type("z");
         }
-        
+
         if (keycode == KEYCODES.GRAVEACCENT) {
             if (shift == true) {
                 type('~');
@@ -455,15 +454,75 @@ function checkKeyPress(keycode) {
                 type("=");
             }
         }
-        
+
+        if (keycode == KEYCODES.NUMPAD0) {
+            type("0");
+        }
+
+        if (keycode == KEYCODES.NUMPAD1) {
+            type("1");
+        }
+
+        if (keycode == KEYCODES.NUMPAD2) {
+            type("2");
+        }
+
+        if (keycode == KEYCODES.NUMPAD3) {
+            type("3");
+        }
+
+        if (keycode == KEYCODES.NUMPAD4) {
+            type("4");
+        }
+
+        if (keycode == KEYCODES.NUMPAD5) {
+            type("5");
+        }
+
+        if (keycode == KEYCODES.NUMPAD6) {
+            type("6");
+        }
+
+        if (keycode == KEYCODES.NUMPAD7) {
+            type("7");
+        }
+
+        if (keycode == KEYCODES.NUMPAD8) {
+            type("8");
+        }
+
+        if (keycode == KEYCODES.NUMPAD9) {
+            type("9");
+        }
+
+        if (keycode == KEYCODES.DECIMALPOINT) {
+            type(".");
+        }
+
+        if (keycode == KEYCODES.MULTIPLY) {
+            type("*");
+        }
+
+        if (keycode == KEYCODES.SUBTRACT) {
+            type("-");
+        }
+
+        if (keycode == KEYCODES.DIVIDE) {
+            type("/");
+        }
+
+        if (keycode == KEYCODES.ADD) {
+            type("+");
+        }
+
     }
 }
 
 function checkKeyUp(keycode) {
     down[keycode] = null;
     if (keycode == KEYCODES.SHIFT) {
-            $("#16a").removeClass('keydown');
-        }
+        $("#16a").removeClass('keydown');
+    }
 
     $("#" + keycode).removeClass('keydown');
     if (keycode == KEYCODES.SHIFT) {
