@@ -1,3 +1,6 @@
+04/05/2016 @ 6:19pm (UTC)
+1. Removed 'KEYCODES.TILDA', 'KEYCODES.GRAVEACCENT' already exists
+2. Caps lock on OS X is broken
 04/05/2016 @ 6:13pm (UTC)
 1. Undo last commit
 04/05/2016 @ 3:10pm (UTC)
